fixed the overflow on js page
too much padding in mobile view, added a query

--- a/javascriptstyles.css
+++ b/javascriptstyles.css
@@ -8,6 +8,10 @@
     }
     h1{color: black;}
 }
+/* Fixing the overflow scrolling in mobile */
+@media screen and (max-width: 650px) {
+    .transparent{padding: 1em;}
+}
 
 
 
